[gd_scene load_steps=2 format=3 uid="uid://dyqtyblg8djuj"]

[ext_resource type="Script" path="res://core/ModuleExporter.gd" id="1_mgmlk"]

[node name="ModuleExporter" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mgmlk")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="MainVBox" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Panel" type="Panel" parent="PanelContainer/MarginContainer/MainVBox"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 3.12

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/MainVBox/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="RichTextLabel" type="RichTextLabel" parent="PanelContainer/MarginContainer/MainVBox/Panel/MarginContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 2.21
bbcode_enabled = true
text = "This is a tool for exporting your custom modules. Select any [b][i]Godot Engine v4.x[/i][/b] executable, a folder containing your module project files (.tscn and .gd), and where you wish for the resulting .pck file to be saved. This .pck file is what you'll want to distribute for others to use."
fit_content = true

[node name="HSeparator" type="HSeparator" parent="PanelContainer/MarginContainer/MainVBox"]
layout_mode = 2

[node name="ExecutableContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/MainVBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="Labels" type="HBoxContainer" parent="PanelContainer/MarginContainer/MainVBox/ExecutableContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="GodotExecutableLabel" type="RichTextLabel" parent="PanelContainer/MarginContainer/MainVBox/ExecutableContainer/Labels"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true
text = "Godot Executable:"
autowrap_mode = 2

[node name="FileSelect" type="HBoxContainer" parent="PanelContainer/MarginContainer/MainVBox/ExecutableContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="FilePath" type="LineEdit" parent="PanelContainer/MarginContainer/MainVBox/ExecutableContainer/FileSelect"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
editable = false

[node name="FileSelectorButton" type="Button" parent="PanelContainer/MarginContainer/MainVBox/ExecutableContainer/FileSelect"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.1
text = "..."

[node name="HSeparator2" type="HSeparator" parent="PanelContainer/MarginContainer/MainVBox"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.2

[node name="ProjectContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/MainVBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="Labels" type="HBoxContainer" parent="PanelContainer/MarginContainer/MainVBox/ProjectContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="GodotExecutableLabel" type="RichTextLabel" parent="PanelContainer/MarginContainer/MainVBox/ProjectContainer/Labels"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true
text = "Module Project:"
autowrap_mode = 2

[node name="FileSelect" type="HBoxContainer" parent="PanelContainer/MarginContainer/MainVBox/ProjectContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="FilePath" type="LineEdit" parent="PanelContainer/MarginContainer/MainVBox/ProjectContainer/FileSelect"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
editable = false

[node name="FileSelectorButton" type="Button" parent="PanelContainer/MarginContainer/MainVBox/ProjectContainer/FileSelect"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.1
text = "..."

[node name="HSeparator3" type="HSeparator" parent="PanelContainer/MarginContainer/MainVBox"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.2

[node name="SaveContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/MainVBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="Labels" type="HBoxContainer" parent="PanelContainer/MarginContainer/MainVBox/SaveContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="GodotExecutableLabel" type="RichTextLabel" parent="PanelContainer/MarginContainer/MainVBox/SaveContainer/Labels"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true
text = "Export Location (.pck):"
autowrap_mode = 2

[node name="FileSelect" type="HBoxContainer" parent="PanelContainer/MarginContainer/MainVBox/SaveContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="FilePath" type="LineEdit" parent="PanelContainer/MarginContainer/MainVBox/SaveContainer/FileSelect"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
editable = false

[node name="FileSelectorButton" type="Button" parent="PanelContainer/MarginContainer/MainVBox/SaveContainer/FileSelect"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.1
text = "..."

[node name="HSeparator4" type="HSeparator" parent="PanelContainer/MarginContainer/MainVBox"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/MainVBox"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.7

[node name="ExportButton" type="Button" parent="PanelContainer/MarginContainer/MainVBox/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 3
text = "    Export    "

[node name="ExecutableSelect" type="FileDialog" parent="."]
title = "Open a File"
initial_position = 1
size = Vector2i(600, 400)
ok_button_text = "Open"
file_mode = 0
access = 2

[node name="ProjectSelect" type="FileDialog" parent="."]
title = "Open a Directory"
initial_position = 1
size = Vector2i(600, 400)
ok_button_text = "Select Current Folder"
file_mode = 2

[node name="SaveSelect" type="FileDialog" parent="."]
title = "Select Export Location"
initial_position = 1
size = Vector2i(600, 400)
